--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,5 +1,4 @@
-html,
-body {
+html,body {
     height: 100%;
 }
 
@@ -18,28 +17,36 @@ header {
 }
 
 .body {
+    display: flex;
+    flex-direction: column;
+    height: 10px;
     flex-grow      : 1;
-    background     : url(../../assets/images/advertisement-bg.jpg)no-repeat center center;
+    background     : url(../../assets/images/advertisement-bg.jpg)no-repeat center top;
     background-size: cover;
-    display        : flex;
-    flex-direction: row-reverse;
 }
 
-.body a {
-
+ .body .time {
     margin          : 20px 20px;
-    height          : 20px;
     width           : 70px;
     font-size       : 12px;
     line-height: 20px;
     background-color: #fff;
     border-radius   : 10px;
     text-align: center;
-    
+    align-self: flex-end;  
 }
 .body p{
     height: 100px;
     align-self: flex-end;
     color: #fff;
     font-size: 50px;
+    align-self: center;
+    position: absolute;
+    bottom: 50px;
+    animation: jump 2s;
+} 
+
+@keyframes jump{
+    0%{ opacity: 0; bottom: 100px }
+    100%{opacity: 1;bottom:50px;}
 }
