--- a/src/assets/fonts/iconfont.css
+++ b/src/assets/fonts/iconfont.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3418927 */
-  src: url('iconfont.woff2?t=1653998044054') format('woff2'),
-       url('iconfont.woff?t=1653998044054') format('woff'),
-       url('iconfont.ttf?t=1653998044054') format('truetype');
+  src: url('iconfont.woff2?t=1654341953097') format('woff2'),
+       url('iconfont.woff?t=1654341953097') format('woff'),
+       url('iconfont.ttf?t=1654341953097') format('truetype'),
+       url('iconfont.svg?t=1654341953097#iconfont') format('svg');
 }
 
 .iconfont {
@@ -13,23 +14,39 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-shouye:before {
+.icon-close:before {
+  content: "\e621";
+}
+
+.icon-open:before {
+  content: "\e607";
+}
+
+.icon-down:before {
+  content: "\eb6d";
+}
+
+.icon-over:before {
+  content: "\e624";
+}
+
+.icon-index:before {
   content: "\e600";
 }
 
-.icon-bofang:before {
+.icon-play:before {
   content: "\e66a";
 }
 
-.icon-jingqingqidai:before {
+.icon-expect:before {
   content: "\e652";
 }
 
-.icon-yinle:before {
+.icon-music:before {
   content: "\e644";
 }
 
-.icon-weixin:before {
+.icon-wechat:before {
   content: "\e63f";
 }
 
@@ -37,99 +54,99 @@
   content: "\e65e";
 }
 
-.icon-zanting:before {
+.icon-suspend:before {
   content: "\e618";
 }
 
-.icon-bofang1:before {
+.icon-play2:before {
   content: "\e87c";
 }
 
-.icon-dingwei:before {
+.icon-position:before {
   content: "\e653";
 }
 
-.icon-jiesuo:before {
+.icon-Unlock:before {
   content: "\e684";
 }
 
-.icon-tuijianhuomiao:before {
+.icon-deep-heat:before {
   content: "\e613";
 }
 
-.icon-sudu:before {
+.icon-speed:before {
   content: "\e619";
 }
 
-.icon-dingwei1:before {
+.icon-position2:before {
   content: "\ec32";
 }
 
-.icon-shezhi:before {
+.icon-set:before {
   content: "\e60f";
 }
 
-.icon-yinle1:before {
+.icon-music2:before {
   content: "\e602";
 }
 
-.icon-shuju:before {
+.icon-data:before {
   content: "\e62e";
 }
 
-.icon-caidan:before {
+.icon-menu:before {
   content: "\e61d";
 }
 
-.icon-suoding:before {
+.icon-lock:before {
   content: "\e64a";
 }
 
-.icon-jiantouyou:before {
+.icon-right:before {
   content: "\e61b";
 }
 
-.icon-shijian:before {
+.icon-time:before {
   content: "\e8b8";
 }
 
-.icon-dingwei2:before {
+.icon-position3:before {
   content: "\e603";
 }
 
-.icon-xintiao1:before {
+.icon-heat:before {
   content: "\e65f";
 }
 
-.icon-wode:before {
+.icon-my:before {
   content: "\e659";
 }
 
-.icon-zanting1:before {
+.icon-suspend2:before {
   content: "\e637";
 }
 
-.icon-xiayiqu:before {
+.icon-next:before {
   content: "\e601";
 }
 
-.icon-yinle2:before {
+.icon-music4:before {
   content: "\e6e3";
 }
 
-.icon-chouti:before {
+.icon-drawer:before {
   content: "\e6c1";
 }
 
-.icon-huizhang:before {
+.icon-badge:before {
   content: "\e77b";
 }
 
-.icon-shangyiqu:before {
+.icon-previous:before {
   content: "\e655";
 }
 
-.icon-gangling:before {
+.icon-barbell:before {
   content: "\e67a";
 }
 
