--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -54,13 +54,15 @@ body {
             background-color: rgba(48, 216, 82, .6);
         }
     }
-    i{
+    p{
         display: flex;
         // flex-direction:column;
-        justify-content: space-between;
+        justify-content:space-evenly;
         font-style: normal;
         font-size: 16px;
-        
+        span{
+            color: #fff;
+        }
     }
 }
 .mes{
