--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,141 +1,219 @@
-html,body{
+html,
+body {
     height: 100%;
-    width: 100%;
+    width : 100%;
 }
-.body{
-    height: 100%;
-    display: flex;
+
+.body {
+    height        : 100%;
+    display       : flex;
     flex-direction: column;
-    header{
-        height:25%;
-        background-color: deeppink;
-        
+
+    header {
+        height: 25%;
+
+        // background-color: deeppink;
+        .swiper {
+            height: 100%;
+
+            .first {
+                height         : 100%;
+                width          : 100%;
+                background     : url(../../assets/images/course-img04.jpg) no-repeat center top;
+                background-size: cover;
+            }
+
+            .second {
+                height         : 100%;
+                width          : 100%;
+                background     : url(../../assets/images/course-img03.jpg)no-repeat center top;
+                background-size: cover;
+
+            }
+
+            .third {
+                height         : 100%;
+                width          : 100%;
+                background     : url(../../assets/images/course-img05.jpg)no-repeat center top;
+                background-size: cover;
+            }
+        }
     }
-    main{
-        width: 100%;
-        margin: 0% auto;
-        overflow: auto;
+
+    main {
+        width         : 100%;
+        margin        : 0% auto;
+        overflow      : auto;
         flex-direction: column;
-        flex-grow: 1;
-        padding:0 15px;
-       
-        .ranking{
-            width: 100%;
-            height: 150px;
-            margin-top: 10px;
-            display: flex;
+        flex-grow     : 1;
+        padding       : 0 15px;
+
+        .ranking {
+            width          : 100%;
+            height         : 150px;
+            margin-top     : 10px;
+            display        : flex;
             justify-content: space-between;
-            a{
+
+            a {
                 padding: 10px 10px;
-                span{
-                    color: black;
-                    font-size: 18px;
+
+                span {
+                    color      : black;
+                    font-size  : 18px;
                     font-weight: bold;
                 }
             }
-           a.first{
-               width: 40%;
-               height: 100%;
-               border-radius: 15px;
-               opacity: .6;
-               background: url(../../assets/images/index-card-rank.png) no-repeat -10px bottom;
-               background-size: 90% 90%;
-               background-color: rgb(8, 86, 86);
-            }
-           a{
-            width: 55%;
-            height: 100%;
-            border-radius: 15px;
-            opacity: .6;
-            background: url(../../assets/images/index-card-sum.png) no-repeat 10px 50px;
-            background-size: 60% 60%;
-            background-color: rgb(22, 225, 110);
-            }
-        }
-        .data{
-            width: 100%;
-            height: 110px;
-            margin-top: 10px;
-            display: flex;
-            justify-content: space-between;
-            a{
-                padding: 10px 10px;
-                span{
-                    color:#fff;
-                    font-size: 18px;
+
+
+            a.first {
+                width           : 40%;
+                height          : 100%;
+                border-radius   : 15px;
+                opacity         : .6;
+                background      : url(../../assets/images/index-card-rank.png) no-repeat -10px bottom;
+                background-size : 90% 90%;
+                background-color: rgb(8, 86, 86);
+
+                em {
+                    color      : deeppink;
+                    display    : block;
+                    width      : 100%;
+                    font-size  : 50px;
                     font-weight: bold;
+                    text-indent: 10px;
                 }
             }
-           a.first{
-               width: 48%;
-               height: 100%;
-               border-radius: 15px;
-               background: url(../../assets/images/index-card-data.png) no-repeat center top;
-               background-size: cover;
-           }
-           a{
-            width: 48%;
-            height: 100%;
-            border-radius: 15px;
-            // opacity: .6;
-            background: url(../../assets/images/index-card-badge.png) no-repeat 5px 20px;
-            background-size: 65% 80%;
-            background-color: rgb(22, 225, 110);
-            .badge{
-                color: #666;
+
+            a {
+                width           : 55%;
+                height          : 100%;
+                border-radius   : 15px;
+                opacity         : .6;
+                background      : url(../../assets/images/index-card-sum.png) no-repeat 10px 50px;
+                background-size : 60% 60%;
+                background-color: rgb(22, 225, 110);
+            }
+
+            button {
+                font-size       : 16px;
+                color           : #000;
+            }
+
+            em {
+                color      : rgb(189, 15, 27);
+                display    : block;
+                font-size  : 40px;
+                font-weight: bold;
+                text-indent: 10px;
             }
         }
+
+        .data {
+            width          : 100%;
+            height         : 110px;
+            margin-top     : 10px;
+            display        : flex;
+            justify-content: space-between;
+
+            a {
+                padding: 10px 10px;
+
+                span {
+                    color      : #fff;
+                    font-size  : 18px;
+                    font-weight: bold;
+                }
+
+                em {
+                    color      : deeppink;
+                    display    : block;
+                    font-size  : 50px;
+                    font-weight: bold;
+                    text-indent: 80px;
+                }
+            }
+
+            a.first {
+                width          : 48%;
+                height         : 100%;
+                border-radius  : 15px;
+                background     : url(../../assets/images/index-card-data.png) no-repeat center top;
+                background-size: cover;
+            }
+
+            a {
+                width           : 48%;
+                height          : 100%;
+                border-radius   : 15px;
+                // opacity: .6;
+                background      : url(../../assets/images/index-card-badge.png) no-repeat 5px 20px;
+                background-size : 65% 80%;
+                background-color: rgb(22, 225, 110);
+
+                .badge {
+                    color: #666;
+                }
+            }
         }
-        .course{
-            width: 100%;
-            height: 100px;
-            margin-top: 10px;
-            border-radius: 13px;
-            padding: 10px 10px;
-            background: url(../../assets/images/course-img04.jpg) no-repeat center  top;
+
+        .course {
+            width          : 100%;
+            height         : 100px;
+            margin-top     : 10px;
+            border-radius  : 13px;
+            padding        : 10px 10px;
+            background     : url(../../assets/images/course-img04.jpg) no-repeat center top;
             background-size: cover;
-            span{
-                color:#fff;
-                font-size: 18px;
+
+            span {
+                color      : #fff;
+                font-size  : 18px;
                 font-weight: bold;
             }
         }
-        .run{
-            width: 100%;
-            height: 100px;
-            margin-top: 10px;
-            border-radius: 13px;
-            padding: 10px 10px;
-            background: url(../../assets/images/course-img02.png) no-repeat center top;
+
+        .run {
+            width          : 100%;
+            height         : 100px;
+            margin-top     : 10px;
+            border-radius  : 13px;
+            padding        : 10px 10px;
+            background     : url(../../assets/images/course-img02.png) no-repeat center top;
             background-size: cover;
-            span{
-                color:#fff;
-                font-size: 18px;
+
+            span {
+                color      : #fff;
+                font-size  : 18px;
                 font-weight: bold;
             }
         }
     }
-    .mean{
-        height: 10%;
-        display: flex;
+
+    .mean {
+        height         : 10%;
+        display        : flex;
         justify-content: space-evenly;
-        text-align: center;
-        padding-top: 5px;
-        box-sizing: border-box;
-        span{
-            display:block;
-            width: 20%;
+        text-align     : center;
+        padding-top    : 5px;
+        box-sizing     : border-box;
+
+        span {
+            display  : block;
+            width    : 20%;
             font-size: 30px;
-            color: #999;
+            color    : #999;
+
             // font-weight: bold;
-            a{
-                display: block;
-                font-size: 14px;
+            a {
+                display    : block;
+                font-size  : 14px;
                 font-weight: normal;
             }
         }
-        .on{
-            color: #4294FF;
+
+        .on {
+            color      : #4294FF;
             font-weight: bold;
         }
     }
