--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -96,8 +96,8 @@ body {
             }
 
             button {
-                font-size       : 16px;
-                color           : #000;
+                font-size: 16px;
+                color    : #000;
             }
 
             em {
@@ -190,7 +190,7 @@ body {
         }
     }
 
-    .mean {
+    /*   .mean {
         height         : 10%;
         display        : flex;
         justify-content: space-evenly;
@@ -215,6 +215,36 @@ body {
         .on {
             color      : #4294FF;
             font-weight: bold;
+        }
+    } */
+}
+
+.tabbar {
+    height          : 60px;
+    width           : 100%;
+    background-color: #fff;
+    display         : flex;
+    justify-content : center;
+
+    a {
+        display   : inline-block;
+        width     : 15%;
+        text-align: center;
+        margin    : 6px 10px;
+        color: #333;
+
+        &.on {
+            color      : deepskyblue;
+            font-weight: bold;
+        }
+
+        .iconfont {
+            font-size: 28px;
+        }
+
+        span {
+            display  : block;
+            font-size: 14px;
         }
     }
 }
