--- a/src/pages/motion/motion.less
+++ b/src/pages/motion/motion.less
@@ -1,147 +1,163 @@
-html,body{
+html,
+body {
     height: 100%;
-    width: 100%;
 }
-.body{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    header{
-        height: 20%;
-        padding: 0 20px;
-        text-align: center;
-        margin-bottom: 20px;
-        .head{
-            height: 40%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            font-size: 18px;
-            color: #666;
-            font-weight: bold ;
-            border-bottom: 1px solid #ccc;
 
-            a.on{
+.body {
+    height        : 100%;
+    display       : flex;
+    flex-direction: column;
+
+    header {
+        height       : 20%;
+        padding      : 0 20px;
+        text-align   : center;
+        margin-bottom: 20px;
+
+        .head {
+            height         : 40%;
+            display        : flex;
+            justify-content: space-evenly;
+            align-items    : center;
+            font-size      : 18px;
+            color          : #666;
+            font-weight    : bold;
+            border-bottom  : 1px solid #ccc;
+
+            a.on {
                 font-size: 20px;
-                color: #4294ff;
-                position: relative;
-                &::after{
-                    content: '';
-                    display: block;
+                color    : #4294ff;
+                position : relative;
+
+                &::after {
+                    content         : '';
+                    display         : block;
                     background-color: #aad9f7;
-                    height: 4px;
-                    width: 100%;
-                    position: absolute;
-                    bottom: -14px;
-                    left: 0px;
+                    height          : 4px;
+                    width           : 100%;
+                    position        : absolute;
+                    bottom          : -14px;
+                    left            : 0px;
                 }
             }
         }
-        .bot{
-            height: 60%;
-            width: 100%;
-            display: flex;
+
+        .bot {
+            height        : 60%;
+            width         : 100%;
+            display       : flex;
             flex-direction: column;
-            align-items: flex-start;
-            p{
-                font-size: 16px;
+            align-items   : flex-start;
+
+            p {
+                font-size : 16px;
                 margin-top: 10px;
             }
-            .distance{
-                font-size: 45px;
+
+            .distance {
+                font-size  : 45px;
                 font-weight: bold;
-                color: #4294ff;
-                span{
-                    font-size: 16px;
-                    color: #000;
+                color      : #4294ff;
+
+                span {
+                    font-size  : 16px;
+                    color      : #000;
                     font-weight: normal;
                 }
             }
         }
     }
-   
-    .map{
+
+    .map {
         flex-grow: 1;
-        position: relative;
-        .run-type{
-            display: flex;
+        position : relative;
+
+        .run-type {
+            display        : flex;
             justify-content: space-evenly;
-            span{
-                display: inline-block;
-                color: #fff;
-                height: 40px;
-                width: 150px;
-                line-height: 40px;
+
+            span {
+                display         : inline-block;
+                color           : #fff;
+                height          : 40px;
+                width           : 150px;
+                line-height     : 40px;
                 background-color: #9CBCE2;
-                text-align: center;
-                margin: 30px 10px;
-                border-radius: 20px;
-                font-size: 18px;
-                &.on{
+                text-align      : center;
+                margin          : 30px 10px;
+                border-radius   : 20px;
+                font-size       : 18px;
+
+                &.on {
                     background-color: #4294ff;
                 }
             }
         }
-        .go{
-            width: 150px;
-            height: 150px;
-            border-radius: 75px;
+
+        .go {
+            width           : 150px;
+            height          : 150px;
+            border-radius   : 75px;
             background-color: rgba(22, 211, 28, 0.6);
-            text-align: center;
-            line-height: 150px;
-            font-size: 60px;
-            font-weight: bolder;
-            color: #1592CC;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50% ,-50%);
+            text-align      : center;
+            line-height     : 150px;
+            font-size       : 60px;
+            font-weight     : bolder;
+            color           : #1592CC;
+            position        : absolute;
+            top             : 50%;
+            left            : 50%;
+            transform       : translate(-50%, -50%);
         }
-        .function{
-            position: absolute;
-            bottom: 50px;
-            display:flex;
+
+        .function {
+            position       : absolute;
+            bottom         : 50px;
+            display        : flex;
             justify-content: space-evenly;
-            width:  100%;
-            span{
-                display: block;
+            width          : 100%;
+
+            span {
+                display         : block;
                 background-color: #eee;
-                font-size: 25px;
-                height: 40px;
-                width: 40px;
-                border-radius: 20px;
-                text-align: center;
-                line-height: 40px;
+                font-size       : 25px;
+                height          : 40px;
+                width           : 40px;
+                border-radius   : 20px;
+                text-align      : center;
+                line-height     : 40px;
             }
-            .target{
+
+            .target {
                 background-color: #4294ff;
-                display:block;
-                color: #fff;
-                font-size: 16px;
-                font-weight: bold;
-                height: 40px;
-                width: 110px;
-                border-radius: 20px;
-                text-align: center;
-                line-height: 40px;
-                align-self: center;
+                display         : block;
+                color           : #fff;
+                font-size       : 16px;
+                font-weight     : bold;
+                height          : 40px;
+                width           : 110px;
+                border-radius   : 20px;
+                text-align      : center;
+                line-height     : 40px;
+                align-self      : center;
             }
-            
+
         }
     }
 
-    .route{
-        padding: 0 20px;
+    .route {
+        padding      : 0 20px;
         margin-bottom: 15px;
-        span{
-            color: #999;
-            font-size: 14px;
+
+        span {
+            color     : #999;
+            font-size : 14px;
             margin-top: 5px;
         }
-        
+
     }
 
- .mean{
+    /*  .mean{
     height: 10%;
     display: flex;
     justify-content: space-evenly;
@@ -164,5 +180,35 @@ html,body{
         color: #4294FF;
         font-weight: bold;
     }
- }
+ } */
+}
+
+.tabbar {
+    height          : 60px;
+    width           : 100%;
+    background-color: #fff;
+    display         : flex;
+    justify-content : center;
+
+    a {
+        display   : inline-block;
+        width     : 15%;
+        text-align: center;
+        margin    : 6px 10px;
+        color: #333;
+
+        &.on {
+            color      : deepskyblue;
+            font-weight: bold;
+        }
+
+        .iconfont {
+            font-size: 28px;
+        }
+
+        span {
+            display  : block;
+            font-size: 14px;
+        }
+    }
 }
