--- a/src/pages/train/train.less
+++ b/src/pages/train/train.less
@@ -1,103 +1,153 @@
-html,body{
+html,
+body {
     height: 100%;
-    width: 100%;
+    width : 100%;
 }
-.body{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    header{
-        height: 15%;
-        padding: 0px 20px;
-        text-align: center;
-        //margin-bottom: 20px;
-        .head{
-            height: 100%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            font-size: 18px;
-            color: #666;
-            font-weight: bold ;
-            border-bottom: 1px solid #ccc;
 
-            a.on{
+.body {
+    height        : 100%;
+    display       : flex;
+    flex-direction: column;
+
+    header {
+        height    : 15%;
+        padding   : 0px 20px;
+        text-align: center;
+
+        //margin-bottom: 20px;
+        .head {
+            height         : 100%;
+            display        : flex;
+            justify-content: space-evenly;
+            align-items    : center;
+            font-size      : 18px;
+            color          : #666;
+            font-weight    : bold;
+            border-bottom  : 1px solid #ccc;
+
+            a.on {
                 font-size: 20px;
-                color: #4294ff;
-                position: relative;
-                &::after{
-                    content: '';
-                    display: block;
+                color    : #4294ff;
+                position : relative;
+
+                &::after {
+                    content         : '';
+                    display         : block;
                     background-color: #aad9f7;
-                    height: 4px;
-                    width: 100%;
-                    position: absolute;
-                    bottom: -14px;
-                    left: 0px;
+                    height          : 4px;
+                    width           : 100%;
+                    position        : absolute;
+                    bottom          : -14px;
+                    left            : 0px;
                 }
             }
         }
-        .bot{
-            height: 60%;
-            width: 100%;
-            display: flex;
+
+        .bot {
+            height        : 60%;
+            width         : 100%;
+            display       : flex;
             flex-direction: column;
-            align-items: flex-start;
-            p{
-                font-size: 16px;
+            align-items   : flex-start;
+
+            p {
+                font-size : 16px;
                 margin-top: 10px;
             }
-            .distance{
-                font-size: 45px;
+
+            .distance {
+                font-size  : 45px;
                 font-weight: bold;
-                color: #4294ff;
-                span{
-                    font-size: 16px;
-                    color: #000;
+                color      : #4294ff;
+
+                span {
+                    font-size  : 16px;
+                    color      : #000;
                     font-weight: normal;
                 }
             }
         }
     }
-   
-    .map{
+
+    .map {
         flex-grow: 1;
-        padding: 0 20px;
-        overflow: auto;
-        h6{
+        padding  : 0 20px;
+        overflow : auto;
+
+        h6 {
             margin: 10px 0px;
         }
-        .new{
-            height: 200px;
+
+        .new {
+            // height       : 200px;
             border-radius: 10px;
-            border: 1px solid #ccc;
-            box-shadow: 1px 2px 10px rgba(42, 16, 16, 0.3);
-            .top{
-                height: 160px;
-                background-color: #ccc;
-                border-radius: 10px 10px 0 0;
+            border       : 1px solid #ccc;
+            box-shadow   : 1px 2px 10px rgba(42, 16, 16, 0.3);
+
+            a {
+                display         : block;
+                background-color: #fff;
+                border-radius   : 10px 10px 0 0;
+                overflow        : hidden;
+                margin-bottom   : 5px;
+
+                img {
+                    width : 100%;
+                    height: 100%;
+                }
             }
-            p{
-                font-size: 14px;
+
+            p {
+                font-size  : 14px;
                 text-indent: 10px;
-                margin: 3px;
+                margin     : 3px;
             }
-            span{
-                display: block;
-                font-size: 12px;
-                color: #666;
+
+            span {
+                display    : block;
+                font-size  : 12px;
+                color      : #666;
                 text-indent: 10px;
+                margin     : 10px 0;
             }
         }
-        .used{
-            height: 120px;
-            margin: 10px 0;
-            border-radius: 15px;
-            background-color: #eee;
+
+        .used {
+            height             : 120px;
+            margin             : 10px 0;
+            border-radius      : 15px;
+            display            : block;
+            // padding         : 10px;
+            background-color   : #eee;
+            // background      : url(../../assets/images/course-img04.jpg) no-repeat center top;
+            background-size    : cover;
+            position           : relative;
+
+            img {
+                width        : 100%;
+                height       : 100%;
+                border-radius: 15px;
+            }
+
+            h5 {
+                color   : #fff;
+                position: absolute;
+                top     : 50px;
+                left    : 5px;
+            }
+
+            p {
+                color    : #fff;
+                font-size: 14px;
+                position : absolute;
+                top      : 80px;
+                left     : 5px;
+            }
+
         }
     }
 
- .mean{
+    /* .mean{
     height: 10%;
     display: flex;
     justify-content: space-evenly;
@@ -120,5 +170,35 @@ html,body{
         color: #4294FF;
         font-weight: bold;
     }
- }
+ } */
+}
+
+.tabbar {
+    height          : 60px;
+    width           : 100%;
+    background-color: #fff;
+    display         : flex;
+    justify-content : center;
+
+    a {
+        display   : inline-block;
+        width     : 15%;
+        text-align: center;
+        margin    : 6px 10px;
+        color     : #333;
+
+        &.on {
+            color      : deepskyblue;
+            font-weight: bold;
+        }
+
+        .iconfont {
+            font-size: 28px;
+        }
+
+        span {
+            display  : block;
+            font-size: 14px;
+        }
+    }
 }
