--- a/src/pages/mine/mine.less
+++ b/src/pages/mine/mine.less
@@ -61,12 +61,13 @@
      }
 
      .data {
-
+        display: block;
          background-color: #fff;
          margin-top      : 20px;
          padding         : 5px 5% 0;
 
          .top {
+            color    : #000;
              .icon-data {
                  color       : deepskyblue;
                  margin-right: 10px;
@@ -89,6 +90,7 @@
          .bottom {
              display        : flex;
              justify-content: space-between;
+             color    : #666;
 
              p {
                  font-size: 16px;
