--- a/src/pages/motion/motion.less
+++ b/src/pages/motion/motion.less
@@ -237,3 +237,22 @@ body {
         }
     }
 }
+
+//模态框
+.mask{
+    display: none;
+    // display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #4294ff;
+    color: #fff;
+    .countdown{
+        font-size: 150px;
+        font-weight: bolder;
+    }
+}
